fix: prev. screen no longer breaks on small screen

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -91,7 +91,7 @@ main {
     }
 
     .resume {
-        width: 100% !important;
+        width: calc(100%) !important;
     }
 
 
